# Unreal_mcp

./: .dockerignore  .env.example  .env.production  .eslintrc.json  .eslintrc.override.json  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  GAS_Implementation_Plan.md  GEMINI.md  README.md  TOOL_TEST_REPORT.md  _typos.toml  check-unreal-connection.mjs  claude_desktop_config_example.json  eslint.config.mjs  fix.patch  issue  mcp-config-example.json  package-lock.json  package.json  patch.diff  plan.md  server.json  smithery.yaml  test-server.mjs  test_path_fix.patch  tsconfig.json  tsconfig.tsbuildinfo  update_pipeline_handlers.patch  vitest.config.ts
.github/: copilot-instructions.md  dependabot.yml  labeler.yml  labels.yml  pull_request_template.md  release-drafter-config.yml  release-drafter.yml
.jules/: sentinel.md
.rule/: instructions.md
.smithery/: index.cjs
docs/: Engine-API-Reference.md  GraphQL-API.md  Migration-Guide-v0.5.0.md  Roadmap.md  TOOL_12_SEQUENCER_COMPLETE.md  WebAssembly-Integration.md  action-reference.md  action-sync-report.md  batching-guide.md  cpp-action-reference.md  editor-plugin-extension.md  handler-mapping.md  live-action-reference.md  native-automation-progress.md  performance-baseline.md  testing-guide.md  unreal-tool-test-cases.md
scripts/: AGENTS.md  baseline-measurement.mjs  check-unreal-connection.mjs  clean-tmp.js  dump-tools.mjs  fix-test-counts.mjs  generate-action-docs.ts  generate-all-mcp-tests.mjs  generate-all-tests.mjs  generate-cpp-action-docs.mjs  generate-live-action-docs.mjs  generate-mcp-tests.mjs  lint-cpp-safety.js  (+19 more)
wasm/: AGENTS.md  Cargo.toml  README.md
wasm/src/: dependency_resolver.rs  lib.rs  mesh_analysis.rs  property_parser.rs  transform_math.rs
wasm/tests/: integration.rs
(+628 files in other folders)
