[package]
name = "unreal-mcp-wasm"
version = "0.1.0"
edition = "2021"
authors = ["Unreal Engine MCP Team"]
description = "WebAssembly module for performance-critical operations in Unreal Engine MCP Server"
license = "MIT"
repository = "https://github.com/ChiR24/unreal-engine-mcp-server"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Performance",
  "Window",
  "Document"
]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
